submitcorner.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 1869,
  "classifier_probability": 0.87,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.63,
  "homepage_snapshot_redirected_domain": "submitcorner.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020401181052id_/http://www.submitcorner.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020401181052id_/http%3A//submitcorner.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "submitcorner.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601145633id_/http%3A//www.submitcorner.com/Inside/privacy.shtml",
  "policy_title": "Submit Corner - Privacy Policy",
  "policy_url": "submitcorner.com/Inside/privacy.shtml",
  "sha1": "79c789bd9e103271681edba4b394a177b8c49bdf",
  "simhash": 17734432161785875788,
  "simhash_updated": false,
  "site_hostname": "submitcorner.com",
  "site_url": "http://submitcorner.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020601145633",
  "word_count": 285,
  "year": 2002
}

--- a/s/su/sub/submitcorner.com.html
+++ b/s/su/sub/submitcorner.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the submitcorner.com privacy policy that was archived on 2001-08-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010813175112id_/http%3A//submitcorner.com/Inside/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the submitcorner.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601145633id_/http%3A//www.submitcorner.com/Inside/privacy.shtml) for the most accurate reproduction.-->
 
 <html><head><title>Submit Corner - Privacy Policy</title>
 <meta name="description" content="Learn about Submit Corner, the online comprehensive guide to search engines, meta tags, techniques and tips to optimizing search engine rankings. Includes a complete suite of tools, information and strategies from industry experts at no charge.">
@@ -107,12 +107,7 @@
  <p>
   <!--  Banner -->
  </p><center>
-        <!--Begin CPCnet Ad Copyright 1999 Engage Media. 
-            All rights reserved. Patent Pending -->
-                <iframe width="468" height="60" src="http://ad-adex7.flycast.com/server/iframe/SubmitCorner/runofsite/123456" scrolling="no" marginwidth="0" marginheight="0" frameborder="0" vspace="0" hspace="0">
-                <A target="_top" HREF="http://ad-adex7.flycast.com/server/click/SubmitCorner/runofsite/123456"><IMG BORDER=0 WIDTH=468 HEIGHT=60 SRC="http://ad-adex7.flycast.com/server/img/SubmitCorner/runofsite/123456"></A>
-                </iframe>
-        <!--End CPCnet Ad Copyright 1999 Engage Media. All rights reserved. Patent Pending -->
+  <a href="http://our.affiliatetracking.net/wordtracker/af.cgi?aid=2147&amp;redirect=http://www.wordtracker.com/trial/" target="_blank"><img src="/imagedb/banner_metatags.gif" width="468" height="60" border="0" alt="Choose the Right Meta Tags"></a>
  </center>
 <!-- /Banner -->
  <p></p>
@@ -145,15 +140,15 @@
 <br>
 
    <p>
-    <a href="/Tools/Adult/">Adult Resources</a><img src="/imagedb/new.gif" width="28" height="11"><br>
     <a href="/Tools/Assessment/">Assessment Tools</a><br>
     <a href="/Tools/Keywords/">Keyword Thesaurus</a><br>
     <a href="/Tools/Linkpop/">Link Popularity Tracker</a><br>
     <a href="/Tools/Meta/">META Tag Generator</a><br>
     <a href="/Tools/Metascan/">META Tag Scanner</a><br>
-    <a href="/Tools/News/">Newsfeed Wizard</a><img src="/imagedb/new.gif" width="28" height="11"><br>
     <a href="/Tools/Robots/">Robot Generator</a><br>
     <a href="/Tools/Submit/">Submit Engine</a><br>
+    <a href="/Tools/Topwords/">Top Keywords</a><img src="/imagedb/new.gif" width="28" height="11"><br>
+    <a href="/Tools/Wordtracker/">Word Tracker</a><img src="/imagedb/new.gif" width="28" height="11"><br>
    </p>
 
 
@@ -165,7 +160,7 @@
 <br>
 
    <p>
-    <b><a href="/Guide/Bandwidth/"><font color="#000000">Bandwidth Conversation</font></a></b><br>
+    <b><a href="/Guide/Bandwidth/"><font color="#000000">Bandwidth Conservation</font></a></b><br>
     <a href="/Guide/Bandwidth/002.shtml">Background Images</a><br>
     <a href="/Guide/Bandwidth/004.shtml">External Javascript</a><br>
     <a href="/Guide/Bandwidth/005.shtml">Optimize HTML</a><br>
@@ -200,13 +195,13 @@
    <p>
     <b><a href="/Software/"><font color="#000000">Software Packages</font></a></b> <img src="/imagedb/new.gif" width="28" height="11"><br>
     <a href="/Software/Webposition/">Web Position Gold</a><br>
-    <a href="/Software/Topdog/">Topdog</a><br>
     <a href="/Software/Submitwolf/">Submit Wolf</a><br>
     <b><a href="/Software/">See Complete List</a></b><br>
    </p>
 
    <p>
     <b><a href="/Guide/Assessment/"><font color="#000000">Website Assessment</font></a></b><br>
+    <a href="/Guide/Assessment/editor.shtml">Editor's Viewpoint of Directories</a><img src="/imagedb/new.gif" width="28" height="11"><br>
     <a href="/Guide/Assessment/indexing.shtml">Assess Your Site Indexing</a><br>
     <a href="/Guide/Assessment/linking.shtml">Who's Linking To You</a><br>
     <a href="/Guide/Assessment/competitor.shtml">Competitor Identification</a><br>
@@ -339,31 +334,13 @@
 <font face="arial, geneva, helvetica, ms sans serif, verdana" size="2">
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
  <tbody><tr height="2" bgcolor="#90A0B0"><td><img src="/imagedb/spacer.gif" width="1" height="1" border="0"></td></tr>
- <tr align="center" bgcolor="#DFE4E7"><td height="20"><font face="Verdana,Arial,Helvetica" size="2"><a href="/Maillist/"><font color="#000000">Mailing List</font></a> <img src="/imagedb/new.gif" width="28" height="11"><br> </font></td></tr>
+ <tr align="center" bgcolor="#DFE4E7"><td height="20"><font face="Verdana,Arial,Helvetica" size="2"><font color="#000000">Sponsor Message</font></font></td></tr>
  <tr height="2" bgcolor="#90A0B0"><td><img src="/imagedb/spacer.gif" width="1" height="1" border="0"></td></tr>
 </tbody></table>
 <br>
 <center>
-<table border="0" cellpadding="5" cellspacing="1" width="130" bgcolor="#000000">
-<form action="http://www.qksrv.net/interactive" method="get"></form>
-<input type="hidden" name="s" value="newsletter">
-<tbody><tr>
-	<td bgcolor="#368C85"><font size="1" face="Verdana," helvetica,="" arial="" color="#FFFFF1"><div style="font-size: 10">
-		<img src="http://www.webpositionadvisor.com/images/head-signup-newsletter.gif" width="120" height="12" vspace="5" border="0"><br>
-		Name:<br>
-		<input type="text" name="NAME" size="10" style="font-face: Verdana, Helvetica, Arial; font-size: 10"><br>
-		E-mail:<br>
-		<input type="text" name="EMAIL" size="10" style="font-face: Verdana, Helvetica, Arial; font-size: 10"><br>
-		<input type="image" src="http://www.webpositionadvisor.com/images/button-signup.gif" width="76" height="16" border="0" alt="Sign Up">
-	</div></font></td>
-</tr>
-	<input type="hidden" name="pid" value="559932">
-	<input type="hidden" name="url" value="http://www.webpositionadvisor.com/cgi-local/d.cgi">
-	<input type="hidden" name="aid" value="1157504">
-
-</tbody></table>
-<img src="http://www.qksrv.net/image-559932-1157504" width="1" height="1" border="0"><br><br>
-</center>
+<a href="http://www.silverdollar.com/index.html?ID=w2kseo&amp;bn=sdd101201a" target="_blank"><img src="/imagedb/sdd101201a.gif" border="0"></a></center>
+<br>
 <table border="0" cellpadding="0" cellspacing="0" width="100%">
  <tbody><tr height="2" bgcolor="#90A0B0"><td><img src="/imagedb/spacer.gif" width="1" height="1" border="0"></td></tr>
  <tr align="center" bgcolor="#DFE4E7"><td height="20"><font face="Verdana,Arial,Helvetica" size="2"><a href="/Services/"><font color="#000000">Consulting Services</font></a><br></font></td></tr>
@@ -381,59 +358,55 @@
  <center><font face="arial,helvetica" size="1">All links open in a new window</font></center>
 <center>
 <font face="verdana,arial,helvetica" size="2"><a href="/News/"><b>View All Headlines</b></a></font><br>
-<font face="verdana,arial,helvetica" size="1">(Mon, Aug 13 08:00:01)</font>
-</center><br>
-<center>
- <a href="/Tools/News/">Click Here</a>
- to get these Headlines on Your Site FREE!<img src="http://www.commission-junction.com/banners/tracker.exe?AID=346911&amp;PID=559932&amp;banner=0.gif" height="1" width="1" border="0">
+<font face="verdana,arial,helvetica" size="1">(Fri, May 31 19:00:01)</font>
 </center><br>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23216753" target="_blank" onmouseover="window.status='http://www.netimperative.com/media/media.asp';return true;" onmouseout="window.status='';return" true;"=""> Honeyz ask Jeeves for sponsor deal</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.netimperative.com/media/media.asp" target="_blank">Netimperative</a></font>
-<br><font size="1">Date: Aug 13 2001 11:43AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39513973" target="_blank" onmouseover="window.status='http://www.wired.com';return true;" onmouseout="window.status='';return" true;"=""> Google's Search for Winner Ends</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.wired.com" target="_blank">Wired News</a></font>
+<br><font size="1">Date: May 31 2002 1:53PM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23171327" target="_blank" onmouseover="window.status='http://www.urlwire.com/headlines/';return true;" onmouseout="window.status='';return" true;"=""> Lycos Launches Russian Search Engine Today</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.urlwire.com/headlines/" target="_blank">URLwire</a></font>
-<br><font size="1">Date: Aug 11 2001  8:19PM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39483503" target="_blank" onmouseover="window.status='http://www.alternet.org';return true;" onmouseout="window.status='';return" true;"=""> Gagged by Google</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.alternet.org" target="_blank">AlterNet.org</a></font>
+<br><font size="1">Date: May 31 2002 6:07AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23145789" target="_blank" onmouseover="window.status='http://www.thestreet.com/';return true;" onmouseout="window.status='';return" true;"=""> The Exit Sign Flashed Early at Verity</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.thestreet.com/" target="_blank">TheStreet.com</a></font>
-<br><font size="1">Date: Aug 11 2001  1:18AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39478306" target="_blank" onmouseover="window.status='http://searchenginewatch.com';return true;" onmouseout="window.status='';return" true;"=""> The Search Engine Spam Police, Part 2</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://searchenginewatch.com" target="_blank">Search Engine Report</a></font>
+<br><font size="1">Date: May 31 2002 3:29AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23129345" target="_blank" onmouseover="window.status='http://idg.net/';return true;" onmouseout="window.status='';return" true;"=""> Verity bolsters enterprise search software</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://idg.net/" target="_blank">IDG</a></font>
-<br><font size="1">Date: Aug 10 2001  8:15PM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39468758" target="_blank" onmouseover="window.status='http://www.workingforchange.com';return true;" onmouseout="window.status='';return" true;"=""> Gagged by Google</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.workingforchange.com" target="_blank">Working for Change</a></font>
+<br><font size="1">Date: May 31 2002 0:29AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23103369" target="_blank" onmouseover="window.status='http://www.it-director.com/cd/moreover/moreover.asp';return true;" onmouseout="window.status='';return" true;"=""> Google searching on the button</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.it-director.com/cd/moreover/moreover.asp" target="_blank">IT-Director.com</a></font>
-<br><font size="1">Date: Aug 10 2001  9:25AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39468003" target="_blank" onmouseover="window.status='http://www.internetnews.com';return true;" onmouseout="window.status='';return" true;"=""> Overture Nabs AltaVista Contract</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.internetnews.com" target="_blank">Internet News</a></font>
+<br><font size="1">Date: May 31 2002 0:19AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23094916" target="_blank" onmouseover="window.status='http://www.researchbuzz.com/';return true;" onmouseout="window.status='';return" true;"=""> Scientific Search Engines at LLEK</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.researchbuzz.com/" target="_blank">Research Buzz</a></font>
-<br><font size="1">Date: Aug 10 2001  4:21AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39418371" target="_blank" onmouseover="window.status='http://searchenginewatch.com';return true;" onmouseout="window.status='';return" true;"=""> The Search Engine Spam Police, Part 1</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://searchenginewatch.com" target="_blank">Search Engine Report</a></font>
+<br><font size="1">Date: May 30 2002 10:06AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23094922" target="_blank" onmouseover="window.status='http://www.researchbuzz.com/';return true;" onmouseout="window.status='';return" true;"=""> LookSmart Completes Zeal Acquisition; Promises Double</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.researchbuzz.com/" target="_blank">Research Buzz</a></font>
-<br><font size="1">Date: Aug 10 2001  4:21AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39410821" target="_blank" onmouseover="window.status='http://www.highrankings.com/archives.htm';return true;" onmouseout="window.status='';return" true;"=""> Can Doorway Pages Bring Search Engine Success?</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.highrankings.com/archives.htm" target="_blank">High Rankings</a></font>
+<br><font size="1">Date: May 30 2002 7:46AM</font>
 <br></p>
 <p>
 <font face="verdana,arial,helvetica" size="2">
-<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x23093701" target="_blank" onmouseover="window.status='http://www.editorsnet.com/';return true;" onmouseout="window.status='';return" true;"=""> FAST Speeds Up BBC North</a></font><br>
-<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://www.editorsnet.com/" target="_blank">EditorsNet</a></font>
-<br><font size="1">Date: Aug 10 2001  3:33AM</font>
+<a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://c.moreover.com/click/here.pl?x39348105" target="_blank" onmouseover="window.status='http://zdnet.com.com';return true;" onmouseout="window.status='';return" true;"=""> Google's searching for guinea pigs</a></font><br>
+<font size="1">Source: <a href="http://www.submitcorner.com/cgi-bin/portalwindow.cgi?url=http://zdnet.com.com" target="_blank">ZDNet</a></font>
+<br><font size="1">Date: May 29 2002 3:00PM</font>
 <br></p>
 There are 22 additional news headlines. <a href="/News/"><b>Click to View All Headlines</b></a></font><b>
 <img src="/imagedb/spacer.gif" width="170" height="1">
