--- a/a/ab/abc/abc12.com.html
+++ b/a/ab/abc/abc12.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the abc12.com privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217182621id_/http%3A//disney.go.com/corporate/legal/wdig_privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the abc12.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601150621id_/http%3A//disney.go.com/corporate/legal/wdig_privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 TRANSITIONAL//EN"><html><head>
 	<title>WDIG Privacy Policy</title>
@@ -7,7 +7,7 @@
 	<meta name="Keywords" content="WDIG,privacy policy,internet safety,disney">
 	<meta name="type" content="SBU">
 <meta name="SBU" content="TWDC Corporate">
-</head><body bgcolor="#F7F7F7" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0" background="http://a1964.g.akamai.net/7/1964/24/783da7b5c2cc9d/disney.go.com/corporate/legal/images/back.gif">
+</head><body bgcolor="#F7F7F7" leftmargin="0" topmargin="0" marginheight="0" marginwidth="0" background="http://i.disney.go.com/disneygo/corporate/legal/images/back.gif">
 <!-- BEGIN WEBSIDESTORY CODE v6.5 (no 1.0)-->
 <!-- COPYRIGHT 1997-2001 WEBSIDESTORY, INC. ALL RIGHTS RESERVED. U.S.PATENT PENDING. Privacy notice at: http://websidestory.com/privacy -->
 <script language="javascript" id="_hbc">
@@ -38,18 +38,18 @@ document.write("<\!--");
 <a name="top"></a>
 <table width="640" cellspacing="0" cellpadding="0" border="0">
 <tbody><tr>
-    <td colspan="3" width="640"><img src="http://a1964.g.akamai.net/7/1964/24/89e506358adf97/disney.go.com/corporate/legal/images/header.gif" width="641" height="111" alt="Walt Disney Internet Group" border="0" usemap="#header"></td>
+    <td colspan="3" width="640"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/header.gif" width="640" height="111" alt="Walt Disney Internet Group" border="0" usemap="#header"></td>
 </tr>
 <tr>
-    <td colspan="3" width="640"><img src="http://a1964.g.akamai.net/7/1964/24/87d092879bec13/disney.go.com/corporate/legal/images/privacy_terms.gif" width="641" height="56" alt="Walt Disney Internet Group Privacy Policy and Terms of Use" border="0" usemap="#nav">
+    <td colspan="3" width="640"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/privacy_terms.gif" width="641" height="56" alt="Walt Disney Internet Group Privacy Policy and Terms of Use" border="0" usemap="#nav">
 </td>
 </tr>
 <tr>
-    <td colspan="3" width="640"><img src="http://a1964.g.akamai.net/7/1964/24/d07af45b3ca206/disney.go.com/corporate/legal/images/ppwdig.gif" width="641" height="35" alt="WDIG Privacy Policy" border="0" usemap="#pp">
+    <td colspan="3" width="640"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/ppwdig.gif" width="641" height="35" alt="WDIG Privacy Policy" border="0" usemap="#pp">
 </td>
 </tr>
 <tr>
-    <td width="55"><img src="http://a1964.g.akamai.net/7/1964/24/94fb0c3ed8a8f9/disney.go.com/corporate/legal/images/spacer.gif" width="55" height="1" alt="" border="0"></td>
+    <td width="55"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/spacer.gif" width="55" height="1" alt="" border="0"></td>
     <td width="530" valign="TOP">
 <br>
 	<table cellspacing="0" cellpadding="5" border="0">
@@ -65,38 +65,38 @@ We recognize the need to provide additional privacy protections for kids who vis
 </tbody></table>
 <table width="490" cellspacing="0" cellpadding="5" border="0">
 <tbody><tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/f2185e433752ee/disney.go.com/corporate/legal/images/q1_sm.gif" width="28" height="16" alt="Q1" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q1_sm.gif" width="28" height="16" alt="Q1" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q1">What types of information are WDIG sites collecting, and how are the sites collecting it?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/5611feb706f195/disney.go.com/corporate/legal/images/q2_sm.gif" width="28" height="17" alt="Q2" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q2_sm.gif" width="28" height="17" alt="Q2" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q2">How does WDIG use the personally identifiable information that has been collected?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/b605273726ec7a/disney.go.com/corporate/legal/images/q3_sm.gif" width="28" height="17" alt="Q3" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q3_sm.gif" width="28" height="17" alt="Q3" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q3">Does WDIG share information with companies or other organizations that are not part of the WDIG family of sites?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/36fece8b92a090/disney.go.com/corporate/legal/images/q4_sm.gif" width="28" height="17" alt="Q4" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q4_sm.gif" width="28" height="17" alt="Q4" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q4">What choices do I have about WDIG collecting, using, and sharing my information?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/065797bc142bee/disney.go.com/corporate/legal/images/q5_sm.gif" width="28" height="17" alt="Q5" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q5_sm.gif" width="28" height="17" alt="Q5" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q5">What type of security does WDIG provide?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/d9ab0ab93bf81d/disney.go.com/corporate/legal/images/q6_sm.gif" width="28" height="17" alt="Q6" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q6_sm.gif" width="28" height="17" alt="Q6" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q6">How can I access my account information?</a></font></td>
 </tr>
 <tr>
-    <td width="40" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/048690575e25f7/disney.go.com/corporate/legal/images/q7_sm.gif" width="28" height="17" alt="Q7" border="0"></td>
+    <td width="40" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/q7_sm.gif" width="28" height="17" alt="Q7" border="0"></td>
     <td width="450"><font face="arial,helvetica" size="2"><a href="#q7">Whom do I contact with questions or concerns about this privacy policy?</a></font></td>
 </tr>
 </tbody></table>
 <hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q1"></a>
 <table width="530" cellspacing="0" cellpadding="5" border="0">
 <tbody><tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/82f2e2ca9979ea/disney.go.com/corporate/legal/images/a1.gif" width="40" height="30" alt="A1" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a1.gif" width="40" height="30" alt="A1" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>What types of information are WDIG sites collecting, and how are the sites collecting it?</b></font></td>
 </tr>
 <tr>
@@ -119,11 +119,11 @@ Cookies are pieces of information that a Web site sends to your computer while y
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q2"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/54fef40b0a2cdf/disney.go.com/corporate/legal/images/a2.gif" width="40" height="30" alt="A2" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a2.gif" width="40" height="30" alt="A2" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>How does WDIG use the personally identifiable information that has been collected?</b></font></td>
 </tr>
 <tr>
@@ -132,11 +132,11 @@ Cookies are pieces of information that a Web site sends to your computer while y
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q3"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/4ba65aa3b7a119/disney.go.com/corporate/legal/images/a3.gif" width="40" height="30" alt="A3" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a3.gif" width="40" height="30" alt="A3" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>Does WDIG share information with companies or other organizations that are not part of the WDIG family of sites?</b></font></td>
 </tr>
 <tr>
@@ -172,11 +172,11 @@ We will give out personal information as required by law, for example, to comply
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q4"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/437e31a3b7d8de/disney.go.com/corporate/legal/images/a4.gif" width="40" height="30" alt="A4" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a4.gif" width="40" height="30" alt="A4" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>What choices do I have about WDIG collecting, using, and sharing my information?</b></font></td>
 </tr>
 <tr>
@@ -184,11 +184,11 @@ We will give out personal information as required by law, for example, to comply
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q5"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/136eb4335d3f95/disney.go.com/corporate/legal/images/a5.gif" width="40" height="30" alt="A5" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a5.gif" width="40" height="30" alt="A5" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>What type of security does WDIG provide?</b></font></td>
 </tr>
 <tr>
@@ -196,11 +196,11 @@ We will give out personal information as required by law, for example, to comply
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q6"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/dec3a6ac6cd6c8/disney.go.com/corporate/legal/images/a6.gif" width="40" height="30" alt="A6" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a6.gif" width="40" height="30" alt="A6" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>How can I access my account information?</b></font></td>
 </tr>
 <tr>
@@ -208,11 +208,11 @@ We will give out personal information as required by law, for example, to comply
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q7"></a></td>
 </tr>
 <tr>
-    <td width="50" align="center"><img src="http://a1964.g.akamai.net/7/1964/24/d18c1502623219/disney.go.com/corporate/legal/images/a7.gif" width="40" height="30" alt="A7" border="0"></td>
+    <td width="50" align="center"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/a7.gif" width="40" height="30" alt="A7" border="0"></td>
     <td width="480"><font face="arial,helvetica" size="2"><b>Whom do I contact with questions or concerns about this privacy policy?</b></font></td>
 </tr>
 <tr>
@@ -229,7 +229,7 @@ We will give out personal information as required by law, for example, to comply
 <table cellspacing="0" cellpadding="5" border="0">
 <tbody><tr>
     <td><font face="arial,helvetica" size="2">Walt Disney Internet Group is a licensee of the TRUSTe Privacy Program. If you believe that WDIG has not responded to your inquiry or your inquiry has not been satisfactorily addressed, please contact TRUSTe <a href="http://www.truste.org/users/users_watchdog.html" terget="_top">http://www.truste.org/users/users_watchdog.html</a>.</font></td>
-    <td width="100"><a href="http://www.truste.org/validate/3876" target="_new"><img src="http://a1964.g.akamai.net/7/1964/24/9109a34da35ab4/disney.go.com/corporate/legal/images/truste.gif" width="91" height="73" alt="Trust-E" border="0"></a></td>
+    <td width="100"><a href="http://www.truste.org/validate/3876" target="_new"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/truste.gif" width="91" height="73" alt="Trust-E" border="0"></a></td>
 </tr>
 </tbody></table>
 </p><p>
@@ -237,14 +237,14 @@ We will give out personal information as required by law, for example, to comply
 </tr>
 <tr>
 	<td width="530" colspan="2">
-	<p align="right"><a href="#top"><img src="http://a1964.g.akamai.net/7/1964/24/23978f756d5f33/disney.go.com/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
+	<p align="right"><a href="#top"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/top.gif" width="87" height="20" alt="" border="0"></a>
 	</p><hr align="CENTER" size="1" width="80%" color="#3951A5"><a name="q8"></a></td>
 </tr>
 </tbody></table>
 
 	
 	</td>
-    <td width="55"><img src="http://a1964.g.akamai.net/7/1964/24/94fb0c3ed8a8f9/disney.go.com/corporate/legal/images/spacer.gif" width="95" height="1" alt="" border="0"></td>
+    <td width="55"><img src="http://i.disney.go.com/disneygo/corporate/legal/images/spacer.gif" width="95" height="1" alt="" border="0"></td>
 </tr>
 <tr>
     <td colspan="3" width="640"><br><script src="http://disney.go.com/corporate/legal/footer.js"></script>
@@ -264,7 +264,7 @@ We will give out personal information as required by law, for example, to comply
 <area shape="RECT" coords="566,17,623,50" href="http://ebay.disney.com" alt="Disney Auctions">
 <area shape="RECT" coords="560,53,614,83" href="http://disney.store.go.com/" alt="DisneyStore.com">
 <area shape="RECT" coords="491,56,551,80" href="http://espn.go.com" alt="ESPN.com">
-<area shape="RECT" coords="326,53,398,80" href="http://family.go.com" alt="Family.com">
+<area shape="RECT" coords="326,53,398,80" href="http://family.go.com" alt="FamilyFun.com">
 <area shape="RECT" coords="263,56,314,80" href="http://abc.go.com" alt="ABC.com">
 <area shape="RECT" coords="233,20,308,47" href="http://disney.go.com" alt="Disney.com">
 <area shape="RECT" coords="359,29,437,44" href="http://www.soccernet.com" alt="Soccernet.com">
