--- a/a/ab/aba/abanet.org.html
+++ b/a/ab/aba/abanet.org.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the abanet.org privacy policy that was archived on 2000-10-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20001018040258id_/http%3A//www.abanet.org/privacy_statement.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the abanet.org privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601152256id_/http%3A//www.abanet.org/privacy_statement.html) for the most accurate reproduction.-->
 
 <html><head>
 <title>American Bar Association</title>
@@ -20,7 +20,7 @@
 <script language="JavaScript" src="/javascripts/top_nav.js"></script>
 
 <!--This is for the customization of the left navbar drops. Point this to your site's script-->
-<script language="JavaScript" src="/javascripts/home_sidenav.js"></script>
+<script language="JavaScript" src="/javascripts/home_sidenav2.js"></script>
 
 <!-- Title of your document. Modify at will -->
 <title>American Bar Association</title>
@@ -63,7 +63,10 @@ body_tag();
 </p><p>Your e-mail address will only be used within the ABA and its entities.  We do not sell or rent e-mail addresses to anyone outside the ABA.  If you wish to be removed from our e-mail mailings, please <a href="/members/join/coa.html">click here</a> and complete the form to remove your e-mail address from our list or call our Service Center at 1-800-285-2221.
 
 
-
+</p><p><font class="subheader">The ABA's Support Level Agreement</font>
+</p><p>The ABA is committed to providing 100 percent availability of its Internet site(s) and email aliasing service.  We have implemented safeguards and alarms to notify us in the event of loss of Internet connectivity to the backbone and of hardware failures.  Even with these safeguards in place, loss of connectivity or hardware failure can still occur.  For this reason, the ABA cannot "guarantee" its Internet connectivity, nor can we be responsible for lost or delayed requests, email, or content. 
+</p><p>For questions regarding our web site being down or any related service outage, please send an email to 
+<a href="mailto:help@abanet.org">help@abanet.org</a>.
 
 </p><p><font class="subheader">Use of Cookies and IP addresses </font>
 
@@ -99,7 +102,7 @@ body_tag();
 
 </p><p><font class="subheader">Public Forums</font>
 
-</p><p>This site makes chat rooms, forums, ListServs and message boards available to its users. Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.  Although ABANET.ORG tries to protect your personal information when using these public forums, ABANET.ORG cannot ensure or warrant the security of any information you transmit to us, and you do so at your own risk.  It is also not the ABANET.ORG's responsibility for maintaining the secrecy of any passwords you set up and/or any account information you have disclosed.
+</p><p>This site makes chat rooms, forums, List Serves and message boards available to its users. Please remember that any information that is disclosed in these areas becomes public information and you should exercise caution when deciding to disclose your personal information.  Although ABANET.ORG tries to protect your personal information when using these public forums, ABANET.ORG cannot ensure or warrant the security of any information you transmit to us, and you do so at your own risk.  It is also not the ABANET.ORG's responsibility for maintaining the secrecy of any passwords you set up and/or any account information you have disclosed.
 
 </p><p><font class="subheader">Security</font>
 
