performics.com (archived on 2002-06-01)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 8867,
  "classifier_probability": 0.97,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.01,
  "homepage_snapshot_redirected_domain": "performics.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020330163351id_/http://performics.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020330163351id_/http%3A//performics.com",
  "interval": "2002_A",
  "link_text": "Our Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "performics.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020601182207id_/http%3A//performics.com/privacy.html",
  "policy_title": "Performics: Performance Based Marketing Solutions - Privacy Policy",
  "policy_url": "performics.com/privacy.html",
  "sha1": "9fb4829d4afb1b98a243001f0d13e9759e6fedfa",
  "simhash": 2376097740969200394,
  "simhash_updated": true,
  "site_hostname": "performics.com",
  "site_url": "http://performics.com",
  "smog": 15.69,
  "strict_updated": true,
  "timestamp": "20020601182207",
  "word_count": 1402,
  "year": 2002
}

--- a/p/pe/per/performics.com.html
+++ b/p/pe/per/performics.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the performics.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201165449id_/http%3A//performics.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the performics.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601182207id_/http%3A//performics.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	<meta name="description" content="Performics is a leading pay-for-performance, online marketing company which develops and implements customer acquisition and retention solutions and provides full-service account management">
@@ -344,7 +344,7 @@ Performics has always been and continues to be committed to safeguarding privacy
 	<tr>
 		<td class="footer" width="100%">
 			<img src="images/global/spacer.gif" width="1" height="10" border="0"><br>
-			<img src="images/global/spacer.gif" width="22" height="10" border="0"><nobr>© 2001 Performics Inc. &nbsp; <img src="images/global/logo_performics_footer.gif" width="48" height="35" hspace="0" vspace="0" border="0" align="absmiddle"></nobr><br>
+			<img src="images/global/spacer.gif" width="22" height="10" border="0"><nobr>© 2001-2002 Performics Inc. &nbsp; <img src="images/global/logo_performics_footer.gif" width="48" height="35" hspace="0" vspace="0" border="0" align="absmiddle"></nobr><br>
 			<img src="images/global/spacer.gif" width="1" height="10" border="0"><br>
 		</td>
 	</tr>
@@ -402,7 +402,7 @@ Performics has always been and continues to be committed to safeguarding privacy
 			</div>
 		</div>
 		<!--// END MARKETER MENU -->
-		<!-- DISTRIBUTOR MENU -->
+		<!-- DISTRIBUTION MENU -->
 		<div id="how" class="menu2inner">
 			<div id="howtab" class="menu2innertab">
 				<table border="0" cellpadding="0" cellspacing="0" bgcolor="#990033">
@@ -419,11 +419,11 @@ Performics has always been and continues to be committed to safeguarding privacy
 							<img src="images/global/spacer.gif" width="2" height="5" border="0"><br>
 							&nbsp;<a href="distribution/index.html" class="dynamicmenu">Overview</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 							<img src="images/global/spacer.gif" width="185" height="9" border="0"><br>
-
+<!-- 
 							&nbsp;<a href="distribution/products.html" class="dynamicmenu">Our Products</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 
 							<img src="images/global/spacer.gif" width="185" height="9" border="0"><br>
-
+ -->
 							&nbsp;<a href="distribution/tracking.html" class="dynamicmenu">Our Tracking Technology</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 
 							<img src="images/global/spacer.gif" width="185" height="9" border="0"><br>
@@ -491,11 +491,11 @@ Performics has always been and continues to be committed to safeguarding privacy
 							&nbsp;<a href="about/clients.html" class="dynamicmenu">Select Clients &amp; Dist. Partners</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 
 							<img src="images/global/spacer.gif" width="185" height="9" border="0"><br>
-
-							&nbsp;<a href="about/tradeshows.html" class="dynamicmenu">2001 Trade Shows</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
+<!-- 
+							&nbsp;<a href="about/tradeshows.html" class="dynamicmenu">2002 Trade Shows</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 
 							<img src="images/global/spacer.gif" width="185" height="9" border="0"><br>
-
+ -->
 							&nbsp;<a href="about/careers.html" class="dynamicmenu">Career Opportunities</a><img align="absmiddle" src="images/global/bullet_menu.gif" width="10" height="16" border="0"><br>
 
 							<img src="images/global/spacer.gif" width="2" height="13" border="0"><br>
