--- a/e/es/esp/espc.com.html
+++ b/e/es/esp/espc.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the espc.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211165047id_/http%3A//www.espc.com/information/privacy_statement.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the espc.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601182803id_/http%3A//www.espc.com/information/privacy_statement.asp) for the most accurate reproduction.-->
 
 <html><!-- #BeginTemplate "/Templates/ESPC Homeline Template.dwt" --><head>
 
@@ -12,7 +12,7 @@ function GoAdvert(iAdvertID)
 var TargetHRef;
 TargetHRef = "/Advert.asp?AdvertId="+iAdvertID;
 TargetHRef = TargetHRef + "&From=";
-TargetHRef = TargetHRef + "&GUID=FF199B51-2C6B-48A9-9AC1-0BEAD7C851D9";
+TargetHRef = TargetHRef + "&GUID=04EB11D6-5FCB-46B5-BBB2-AECDFCC93E8E";
 location.href = TargetHRef;
 }
 function AppendSessionID(TargetHRef) 
@@ -20,9 +20,9 @@ function AppendSessionID(TargetHRef)
 // append the session id to the URL that is being  submitted 
 // If there is no ? in the string then add one one
 if (TargetHRef.indexOf("?") == -1)
-	{TargetHRef = TargetHRef + "?GUID=FF199B51-2C6B-48A9-9AC1-0BEAD7C851D9";}
+	{TargetHRef = TargetHRef + "?GUID=04EB11D6-5FCB-46B5-BBB2-AECDFCC93E8E";}
 else 
-	{TargetHRef = TargetHRef + "&GUID=FF199B51-2C6B-48A9-9AC1-0BEAD7C851D9";} 
+	{TargetHRef = TargetHRef + "&GUID=04EB11D6-5FCB-46B5-BBB2-AECDFCC93E8E";} 
 // redirect to the required page ---
 location.href = TargetHRef;
 }
@@ -51,7 +51,7 @@ var iMenuToOpen = -1;
     </td>
     <td align="left" class="small" nowrap="" width="150"> 
       <p class="propcount">We currently have<br>
-        2693
+        3120
         properties <br>
         for sale or to let</p>
     </td>
@@ -82,11 +82,11 @@ var iMenuToOpen = -1;
         <img src="/images/main/folder_closed.gif" width="15" height="11" align="absmiddle"><span class="MenuLevel1">Login</span><br>
         <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/login.asp')" class="sublinks">Login 
         Now</a> <br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/default.asp?Now=1.720828E-02')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/default.asp?Now=0.6686212')" class="sublinks">Your 
         Homeline</a><br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/portfolio.asp?Now=0.9890667')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/portfolio.asp?Now=0.8317028')" class="sublinks">Your 
         Portfolio</a><br>
-        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/property_match.asp?Now=4.071552E-02')" class="sublinks">Your 
+        <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/users/property_match.asp?Now=0.1221822')" class="sublinks">Your 
         Matches</a><br>
         <img src="/images/main/folder_closed.gif" width="15" height="11" align="absmiddle"><span class="MenuLevel1">Information</span><br>
         <img src="/images/main/spacer.gif"><a href="javascript:AppendSessionID('/property_catalogue/default.asp')" class="sublinks">Search 
