--- a/y/ya/yac/yachtworld.com.html
+++ b/y/ya/yac/yachtworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the yachtworld.com privacy policy that was archived on 2001-12-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011204192957id_/http%3A//yachtworld.com/globalnav/privacy.html.en) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the yachtworld.com privacy policy that was archived on 2002-06-01.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020601184128id_/http%3A//yachtworld.com/globalnav/privacy.html.en) for the most accurate reproduction.-->
 
 <html lang="en-US"><head>
 
@@ -36,7 +36,7 @@ THIS LINE IS 640 PIXELS WIDE<br>
 -->
 
 
-<table width="632" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><img src="/images/whitesolid.gif" height="6" width="630"></td></tr><tr><td><img src="/images/nav_images/navbuttons.gif.en" usemap="#navbuttonmap" width="632" height="21" border="0" hspace="4" vspace="0"><map name="navbuttonmap"><area shape="rect" coords="2,2,59,19" href="/index.html.en" alt="home" title="home"><area shape="rect" coords="62,2,179,19" href="/boats/index.html.en" alt="boats for sale" title="boats for sale"><area shape="rect" coords="181,2,255,19" href="/aboutus/partners/loan/boatsbank.html" alt="finance" title="finance"><area shape="rect" coords="256,2,341,19" href="/aboutus/partners/insurance/index.html.en" alt="insurance" title="insurance"><area shape="rect" coords="342,2,466,19" href="/byp/searchbyp.cgi.en" alt="marine directory" title="marine directory"><area shape="rect" coords="469,2,545,19" href="/charters/index.html.en" alt="charters" title="charters"><area shape="rect" coords="547,2,629,19" href="/resources/index.html.en" alt="resources" title="resources"></map></td></tr><tr><td><img src="http://yachtworld.com/images/whitesolid.gif" height="5" width="630"><br><img border="0" src="http://yachtworld.com/images/ywlogo4colorsmall.gif" height="33" width="250" hspace="0"></td></tr></tbody></table>
+<table width="632" cellspacing="0" cellpadding="0" border="0"><tbody><tr><td><img src="/images/whitesolid.gif" height="6" width="630"></td></tr><tr><td><img src="/images/nav_images/navbuttons.gif.en" usemap="#navbuttonmap" width="632" height="21" border="0" hspace="4" vspace="0"><map name="navbuttonmap"><area shape="rect" coords="2,2,51,20" href="/index.html.en" alt="home" title="home"><area shape="rect" coords="53,2,162,20" href="/boats/index.html.en" alt="boats for sale" title="boats for sale"><area shape="rect" coords="164,2,231,20" href="/aboutus/partners/loan/boatsbank.html" alt="finance" title="finance"><area shape="rect" coords="233,2,310,20" href="/aboutus/partners/insurance/index.html.en" alt="insurance" title="insurance"><area shape="rect" coords="312,2,365,20" href="/productstore/index.jsp" alt="store" title="store"><area shape="rect" coords="367,2,484,20" href="/byp/searchbyp.cgi.en" alt="marine directory" title="marine directory"><area shape="rect" coords="485,2,554,20" href="/charters/index.html.en" alt="charters" title="charters"><area shape="rect" coords="555,2,633,20" href="/resources/index.html.en" alt="magazines" title="magazines"></map></td></tr><tr><td><img src="http://yachtworld.com/images/whitesolid.gif" height="5" width="630"><br><img border="0" src="http://yachtworld.com/images/ywlogo4colorsmall.gif" height="33" width="250" hspace="0"></td></tr></tbody></table>
 
 <!-- ----------------- End of YW Standard Header ----------------------- -->
 
@@ -62,7 +62,7 @@ THIS LINE IS 640 PIXELS WIDE<br>
 <a href="/globalnav/email_us.cgi.en" class="nolinenavy"><b>Contact Us</b></a><br><br>
 <a href="/globalnav/help/index.html.en" class="nolinenavy"><b>Help</b></a><br><br>
  
-<br><img src="http://yachtworld.com/images/nav_images/14.jpg" alt="generic photo"></font></td><td valign="top">
+<br><img src="http://yachtworld.com/images/nav_images/9.jpg" alt="generic photo"></font></td><td valign="top">
  <table border="0" cellpadding="12" cellspacing="0" width="530">
   <tbody><tr>
    <td width="50%" height="20" colspan="2">
@@ -191,7 +191,7 @@ We may disclose personal information when required by law or in the good-faith b
 
     </tr>
     <tr>
-      <td colspan="8" align="center"><b><font size="1" face="Verdana"><br><a href="http://yachtworld.com/globalnav/copyright.html.en" class="nolinenavy">copyright © 2001 boats.com, Inc.</a>  All Rights Reserved.</font></b><br><font size="1" face="Verdana">Site photos copyright © 2001 <a class="nolinenavy" href="http://yachtworld.com/rabinowitz"><b>Neil Rabinowitz</b></a>.</font><br><font size="1" face="Verdana">YachtWorld.com ® since 1995</font>
+      <td colspan="8" align="center"><b><font size="1" face="Verdana"><br><a href="http://yachtworld.com/globalnav/copyright.html.en" class="nolinenavy">copyright © 2002 boats.com, Inc.</a>  All Rights Reserved.</font></b><br><font size="1" face="Verdana">Site photos copyright © 2002 <a class="nolinenavy" href="http://yachtworld.com/rabinowitz"><b>Neil Rabinowitz</b></a>.</font><br><font size="1" face="Verdana">YachtWorld.com ® since 1995</font>
       </td>
     </tr>
   </tbody></table>
